# plotsandprosper-api

./: .dockerignore  .env  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
api/: settings.py  urls.py
common/: admin.py  permissions.py  serializers.py  urls.py  views.py
common/migrations/: 0001_initial.py  0002_contributionwindow_contribution_penalty.py  0003_investment_holdingshare_reversal.py  0004_asset_assetshare.py  0005_buyout_exitrequest.py
common/models/: __init__.py  asset.py  asset_share.py  buy_out.py  contribution.py  contribution_window.py  exit_request.py  holding_share.py  investment.py  member.py  penalty.py  reversal.py
common/services/: __init__.py  asset_service.py  buyout_service.py  contribution_service.py  exit_service.py  investment_service.py  position_service.py  statement_service.py
common/views/: __init__.py  admin_views.py  auth_views.py  group_views.py  position_views.py  statement_views.py  test_view.py
specs/001-plots-prosper-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: __init__.py  conftest.py
tests/contract/: __init__.py  test_admin_contributions.py  test_admin_exit_buyout.py  test_admin_investments.py  test_auth.py  test_me_position.py
tests/integration/: test_asset_conversion.py  test_contribution_flow.py  test_exit_buyout.py  test_member_position.py  test_statement_transparency.py
(+3 files in other folders)
